--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@emailjs/browser": "^4.4.1",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
